--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,8 @@
 # SPDX-FileCopyrightText: 2019-2020 Magenta ApS
 # SPDX-License-Identifier: MPL-2.0
 
-# For `docker push` to work, the following envionment variables have to set in
-# the Gitlab UI.
-# RELEASE_REGISTRY_USER
-# RELEASE_REGISTRY_PASSWORD
-
 stages:
   - lint
-  # build stage is not blocked by lint stage, as we have a DAG:
-  # https://docs.gitlab.com/ee/ci/directed_acyclic_graph/index.html
   - build
   - test
   - release
@@ -43,15 +36,18 @@ workflow:
     - if: $CI_COMMIT_BRANCH
 
 include:
-  - project: 'labs/salt-automation'
-    ref: 'master'
-    file: '/gitlab-ci-templates/common/autopub.v1.yml'
-  - project: 'labs/salt-automation'
-    ref: 'master'
-    file: '/gitlab-ci-templates/common/docker-release.v1.yml'
-  - project: "labs/salt-automation"
-    ref: "master"
-    file: "/gitlab-ci-templates/common/config-updater-meta.v1.yml"
+  - project: labs/salt-automation
+    ref: master
+    file: /gitlab-ci-templates/common/autopub.v1.yml
+  - project: labs/salt-automation
+    ref: master
+    file: /gitlab-ci-templates/common/docker-build.v1.yml
+  - project: labs/salt-automation
+    ref: master
+    file: /gitlab-ci-templates/common/docker-release.v1.yml
+  - project: labs/salt-automation
+    ref: master
+    file: /gitlab-ci-templates/common/config-updater-meta.v1.yml
 
 # Lint stage
 #############
@@ -74,33 +70,12 @@ lint-all:
   script:
     - pre-commit run --all-files
 
-# Build stage
-#############
-
-Build RealmBuilder:
-  stage: build
-  needs: []
-  image:
-    # We use kaniko v0.16.0 as both v0.17.0, v0.17.1, v0.18.0 and v0.19.0 contains fatal bugs.
-    name: gcr.io/kaniko-project/executor:v1.5.2-debug
-    entrypoint: [""]
-  tags:
-    - docker
-  script:
-    - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
-    - /kaniko/executor
-      --cache
-      --context=$CI_PROJECT_DIR
-      --dockerfile=$CI_PROJECT_DIR/Dockerfile
-      --destination=${IMAGE_SHA}
-
-
 # Test stage
 ############
 
 Test RealmBuilder:
   stage: test
-  needs: ["Build RealmBuilder"]
+  needs: ["Build"]
   image:
     name: ${IMAGE_SHA}
     entrypoint: [""]
