--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,15 +8,17 @@ stages:
   - release
   - deploy
 
-variables:
-  # Project variables
-  RELEASE_REGISTRY: docker.io
-  RELEASE_REGISTRY_IMAGE: index.docker.io/magentaaps/os2mo-keycloak-realm-builder
 
-  IMAGE_SHA: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHA}
+variables:
+  REALMBUILDER_IMAGE_SHA: ${CI_REGISTRY_IMAGE}/realm-builder:${CI_COMMIT_SHA}
+  REALMBUILDER_RELEASE_REGISTRY_IMAGE: index.docker.io/magentaaps/os2mo-keycloak-realm-builder
+
+  INTEGRATIONBUILDER_IMAGE_SHA: ${CI_REGISTRY_IMAGE}/integration-builder:${CI_COMMIT_SHA}
+  REALMBUILDER_RELEASE_REGISTRY_IMAGE: index.docker.io/magentaaps/os2mo-keycloak-integration-builder
 
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
   PRE_COMMIT_HOME: "$CI_PROJECT_DIR/.cache/pre-commit"
+
 
 cache:
   key: "${CI_JOB_NAME}"
@@ -26,14 +28,11 @@ cache:
     - .cache/pre-commit
 
 
-# Only run pipeline when pushing a tag or a branch.
-# This is a workaround for a bug causing detached pipelines on MRs
-# See: https://gitlab.com/gitlab-org/gitlab/-/issues/34756
-#      https://docs.gitlab.com/ee/ci/yaml/#workflowrules-templates
 workflow:
   rules:
     - if: $CI_COMMIT_TAG
     - if: $CI_COMMIT_BRANCH
+
 
 include:
   - project: labs/salt-automation
@@ -41,13 +40,14 @@ include:
     file: /gitlab-ci-templates/common/autopub.v1.yml
   - project: labs/salt-automation
     ref: master
-    file: /gitlab-ci-templates/common/docker-build.v1.yml
+    file: /gitlab-ci-templates/common/docker-build-meta.v1.yml
   - project: labs/salt-automation
     ref: master
-    file: /gitlab-ci-templates/common/docker-release.v1.yml
+    file: /gitlab-ci-templates/common/docker-release-meta.v1.yml
   - project: labs/salt-automation
     ref: master
     file: /gitlab-ci-templates/common/config-updater-meta.v1.yml
+
 
 # Lint stage
 #############
@@ -70,14 +70,32 @@ lint-all:
   script:
     - pre-commit run --all-files
 
+
+# Build stage
+#############
+
+Build RealmBuilder:
+  extends: .build-docker
+  variables:
+    CI_IMAGE: ${REALMBUILDER_IMAGE_SHA}
+
+
+Build IntegrationBuilder:
+  extends: .build-docker
+  variables:
+    CONTEXT: ${CI_PROJECT_DIR}/integration
+    DOCKERFILE: ${CI_PROJECT_DIR}/integration/Dockerfile
+    CI_IMAGE: ${INTEGRATIONBUILDER_IMAGE_SHA}
+
+
 # Test stage
 ############
 
 Test RealmBuilder:
   stage: test
-  needs: ["Build"]
+  needs: ["Build RealmBuilder"]
   image:
-    name: ${IMAGE_SHA}
+    name: ${REALMBUILDER_IMAGE_SHA}
     entrypoint: [""]
   variables:
     KEYCLOAK_ADMIN_PASSWORD: "123"
@@ -90,19 +108,47 @@ Test RealmBuilder:
 # Release stage
 ###############
 
-Release to Dev:
+Release RealmBuilder master:
+  extends: .release-master
+  variables:
+    CI_IMAGE: ${REALMBUILDER_IMAGE_SHA}
+    RELEASE_IMAGE: ${REALMBUILDER_RELEASE_REGISTRY_IMAGE}
+
+Release RealmBuilder version:
+  extends: .release-version
+  variables:
+    CI_IMAGE: ${REALMBUILDER_IMAGE_SHA}
+    RELEASE_IMAGE: ${REALMBUILDER_RELEASE_REGISTRY_IMAGE}
+
+
+Release IntegrationBuilder master:
+  extends: .release-master
+  variables:
+    CI_IMAGE: ${INTEGRATIONBUILDER_IMAGE_SHA}
+    RELEASE_IMAGE: ${INTEGRATIONBUILDER_RELEASE_REGISTRY_IMAGE}
+
+Release IntegrationBuilder version:
+  extends: .release-version
+  variables:
+    CI_IMAGE: ${INTEGRATIONBUILDER_IMAGE_SHA}
+    RELEASE_IMAGE: ${INTEGRATIONBUILDER_RELEASE_REGISTRY_IMAGE}
+
+# Deploy stage
+##############
+
+Deploy to Dev:
   extends: .release-to-dev
-  needs: ["Release version"]
+  needs: ["Release RealmBuilder version"]
   variables:
     ENDPOINT: os2mo/flux/realmbuilder/update-dev
 
-Release to Test:
+Deploy to Test:
   extends: .release-to-test
   needs: []
   variables:
     ENDPOINT: os2mo/flux/realmbuilder/update-test
 
-Release to Prod:
+Deploy to Prod:
   extends: .release-to-prod
   needs: []
   variables:
