[#49745] Allow optional TF_VAR_ prefix on settings

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
   - lint
   - build
   - test
+  - coverage
   - release
   - deploy
 
@@ -17,6 +18,9 @@ variables:
 
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
   PRE_COMMIT_HOME: "$CI_PROJECT_DIR/.cache/pre-commit"
+
+  PYTEST_COV_MODULE: .
+  PYTEST_COV_FAIL_UNDER: 0
 
 cache:
   key: "${CI_JOB_NAME}"
@@ -48,6 +52,10 @@ include:
   - project: labs/salt-automation
     ref: master
     file: /gitlab-ci-templates/common/config-updater-meta.v1.yml
+  - project: labs/salt-automation
+    ref: master
+    file: /gitlab-ci-templates/python/pytest.v1.yml
+
 
 # Lint stage
 #############
