--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ pydantic = {extras = ["email"], version = "^1.8.2"}
 click = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "6.2.3"
-black = "21.4b2"
+pytest = "^7.1.1"
+black = "^22.3.0"
 flake8 = "3.9.1"
 mypy = "0.812"
 reorder-python-imports = "^2.5.0"
