--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,20 +10,18 @@ repository = "https://git.magenta.dk/rammearkitektur/keycloak-realm-builder"
 keywords = ["os2mo", "keycloak"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-pydantic = {extras = ["email"], version = "^1.8.2"}
-click = "^8.0.1"
-
-[tool.poetry.dev-dependencies]
-pytest = "^7.1.1"
-black = "^22.3.0"
-flake8 = "3.9.1"
-mypy = "0.812"
-reorder-python-imports = "^2.5.0"
+python = "^3.10"
+pydantic = {extras = ["email"], version = "^1.10.7"}
+click = "^8.1.3"
 
 [tool.poetry.group.dev.dependencies]
-pytest-split = "^0.8.0"
+black = "^23.3.0"
+flake8 = "^6.0.0"
+mypy = "^1.2.0"
+pytest = "^7.3.0"
 pytest-cov = "^4.0.0"
+pytest-split = "^0.8.1"
+reorder-python-imports = "^3.9.0"
 
 [tool.autopub]
 git-username = "MagentaBot"
