chore: [#63854] run terraform init under docker-build to download plugins on build

--- a/integration/Dockerfile
+++ b/integration/Dockerfile
@@ -8,5 +8,7 @@ ENV PYTHONUNBUFFERED=1 \
 
 COPY main.tf .
 COPY .terraform.lock.hcl .
+COPY init-sh .
 COPY run.sh .
+RUN ["sh", "init.sh"]
 ENTRYPOINT [ "sh", "run.sh" ]
